--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,7 +1,6 @@
-* {
-    color: red;
+*{
+  color:white;
 }
-
 #root {
   text-align: center;
 }
@@ -143,4 +142,170 @@ button {
       flex-basis: 83.3333%;
       max-width: 83.333333%;
   }
+}
+.footer, .navbar{
+  width: 100%;
+}
+.footer{
+  background-color: #cdcdcd;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.navbar{
+  height: 70px;
+  background-color: #003470;
+  z-index: 100;
+}
+.transparent{
+  background-color: transparent;
+}
+.navbar_box{
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-around;
+  align-items: center;
+}
+.navbar a, .navbar button {
+  color: white;
+  font-size: calc(0.7vw + 5px);
+}
+.navbar button{
+  background-color: transparent;
+  border: 1px solid white;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+.navbar a:hover, .navbar button:hover{
+  color: white;
+  text-decoration: none;
+  -webkit-transform: scale(1.2, 1.2);
+  -moz-transform: scale(1.2, 1.2);
+  -ms-transform: scale(1.2, 1.2);
+  -o-transform: scale(1.2, 1.2);
+  transform: scale(1.2, 1.2);
+}
+.profile-icon{
+  height: 20px;
+  /*margin-top: 15px;*/
+}
+.auth-nav{
+  border-right: 1px solid white;
+  margin: 5px;
+}
+.main-photo{
+  margin-top: -70px;
+}
+.logo-footer{
+  height: 120px;
+}
+.footer *{
+  color: #317199;
+  font-weight: 500;
+  font-size: calc(0.7vw + 5px);
+}
+.footer-icon{
+  height: 20px;
+  margin-right: 15px;
+  margin-top: 20px;
+}
+.footer-title{
+  text-align: left;
+  width: 250px;
+  margin-left: 20px;
+  margin-top: 50px;
+}
+.footer-name{
+  margin-top: 10px;
+  text-align: right;
+}
+.main-bg{
+  position: absolute;
+  width: 100%;
+  left:0;
+  right:0;
+  z-index: -1;
+}
+.main-text-about{
+  background: linear-gradient(0deg, #fff 0%, #000 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.main-page *{
+  color: black;
+  text-align: left;
+}
+.main-page h2{
+  color: #317199;
+  font-size: calc(2vw + 20px);
+  font-weight: 700;
+  width: 60%;
+}
+.logo-main{
+  width: 80%;
+}
+.main-about-link,.main-proj-link, .proj-slider-btn{
+  color: #317199;
+  margin-top: 50px;
+  border: 1px solid #317199;
+  padding: 10px 25px 10px 25px;
+  font-size: 12px;
+}
+.main-about-link:hover,.main-proj-link:hover {
+  text-decoration: none;
+  color: #317199;
+}
+.proj-slider-btn:hover{
+  text-decoration: none;
+  color: white;
+}
+.proj-slider-btn{
+  width: 120px;
+  margin: 5px;
+  color:white;
+  border-color: white;
+}
+.proj-slider-btn-box{
+  position: absolute;
+  left: calc(50% - 60px);
+  top:40px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+.main-proj-link{
+  width: 200px;
+  display:block;
+  margin:40px auto;
+}
+.main-projects-sect h3{
+  margin-bottom: 50px;
+  margin-top: 50px;
+  color: #317199;
+}
+.main-projects-sect h4{
+  color: black;
+  font-size: 15px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+.main-projects-sect{
+  margin-left: 100px;
+  margin-right: 100px;
+  display: flex;
+  flex-direction: column;
+}
+.proj-slider-img{
+  width: 250px;
+  display: block;
+  margin: 0 auto;
+}
+.proj-slider-img:hover + .proj-slider-btn-box, .proj-slider-btn-box:hover{
+  display: flex;
+}
+.proj-slider{
+  position: relative;
+}
+.invisible{
+  display: none;
 }
