--- a/src/css/app.css
+++ b/src/css/app.css
@@ -313,3 +313,34 @@ button {
 .invisible{
   display: none;
 }
+.modal-wrapper-box{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: gray;
+  opacity: 0.5;
+}
+.modal-wrapper{
+  width: 400px;
+  height: 400px;
+  position: fixed;
+  left: calc(50% - 200px);
+  top: calc(50% - 200px);
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.btn-close{
+  border:none;
+  position: absolute;
+  right:10px;
+  top:10px;
+  background-color: red;
+  color:white;
+  width: 40px;
+  height:40px;
+
+}
