--- a/src/css/app.css
+++ b/src/css/app.css
@@ -184,6 +184,10 @@ button {
   -o-transform: scale(1.2, 1.2);
   transform: scale(1.2, 1.2);
 }
+#sign-up-btn{
+  border:none;
+  margin: 0;
+}
 .profile-icon{
   height: 20px;
   /*margin-top: 15px;*/
@@ -308,4 +312,35 @@ button {
 }
 .invisible{
   display: none;
+}
+.modal-wrapper-box{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: gray;
+  opacity: 0.5;
+}
+.modal-wrapper{
+  width: 400px;
+  height: 400px;
+  position: fixed;
+  left: calc(50% - 200px);
+  top: calc(50% - 200px);
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.btn-close{
+  border:none;
+  position: absolute;
+  right:10px;
+  top:10px;
+  background-color: red;
+  color:white;
+  width: 40px;
+  height:40px;
+
 }
