--- a/src/css/app.css
+++ b/src/css/app.css
@@ -57,7 +57,7 @@ button {
   padding:10px 10px;
 }
 
-.accounts-admin_list_cart {
+.accounts-admin_list_card {
   background-color: white;
   height: 170px;
   border:4px solid #85deff;
@@ -77,17 +77,17 @@ button {
   font-weight: 400;
 }
 
-.accounts-admin_list_cart_plus-info{
+.accounts-admin_list_card_plus-info{
   font-size:calc(0.4vw + 9px);
 }
-.accounts-admin_list_cart{
+.accounts-admin_list_card{
   border-radius:10px;
 }
-.accounts-admin_list_cart_icon{
+.accounts-admin_list_card_icon{
   position: absolute;
   left: 16px;
 }
-.accounts-admin_list_cart_text{
+.accounts-admin_list_card_text{
   margin-left: 130px
 }
 .accounts-admin_control_classes-btn {
@@ -131,11 +131,11 @@ button {
 .soc-network-icon-box{
   font-size:20px;
 }
-.accounts-admin_list_cart_person-img{
+.accounts-admin_list_card_person-img{
   width:130px;
   height:130px;
 }
-.accounts-admin_list_cart_small-icon{
+.accounts-admin_list_card_small-icon{
   bottom:0;
   left:0;
   width:45px;
@@ -240,6 +240,7 @@ button {
 }
 .main-text-about{
   background: linear-gradient(0deg, #fff 0%, #000 100%);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -322,7 +323,207 @@ button {
 .invisible{
   display: none;
 }
+.profile{
+  background-color: #88b4d0;
+}
+.profile *{
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  color: #317199;
+  text-align: center;
+}
+.profile > div{
+  padding: 40px;
+  background-color: #e1ecf3;
+  display: flex;
+  margin: 0 auto;
+  max-width: 1400px;
+}
+.l-col{
+  width: 70%;
+  margin-right: 20px;
+}
+.r-col{
+  width: 30%;
+  background-color: #e1ecf3;
+}
+.profile-card{
+  width: 100%;
+  border: 1px solid #317199;
+  display: flex;
+  background-color: #fff;
+}
+.profile-card > div{
+  width: 50%;
+  padding: 10px;
+  position: relative;
+}
+.card-info-box{
+  min-height: 65%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+}
+.card-info{
+  background-color: #e1ecf3;
+  padding: 10px 5px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.card-info > div > img{
+  max-width: 20%;
+  margin: 2px;
+}
+.card-info > p{
+  margin: 0 0 5px;
+}
+.card-info > p, input{
+  font-size: calc(0.7vw + 6px);
+}
+.profile-ava{
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  width:100%;
+  position: relative;
+}
+.profile-ico-l, .profile-ico-r{
+  position: absolute;
+  bottom: 10px;
+  width: 30%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+}
 
+.profile-ico-r{
+  right: 10px;
+  border: 1px solid #317199;
+}
+.profile-ico-l{
+  left:10px;
+}
+.card-name, .card-nickname{
+  width: 90%;
+}
+.card-nickname{
+  font-size: calc(1vw + 5px);
+}
+.card-name{
+  font-size: calc(2vw);
+}
+.edit-info-wrapper{
+  padding-top: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  background-color: #e1ecf3;
+  grid-gap: 10px;
+  width: 100%;
+}
+@media (max-width: 1167px){
+  .edit-info-wrapper{
+      grid-template-columns: 1fr 1fr;
+  }
+}
+.edit-info{
+  border: 1px solid #317199;
+  background-color: #fff;
+  padding: 30px 10px 10px 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.pass-change-box{
+  margin-bottom: 20px;
+}
+.profile input{
+  border: 1px solid #317199;
+  margin-top: 8px;
+  width: 100%;
+}
+.profile input[placeholder]{
+   color: #88b4d0;
+}
+.profile input::-webkit-input-placeholder{
+  color: #88b4d0;
+}
+.profile input::-moz-placeholder{
+  color: #88b4d0;
+}
+.profile input:-ms-input-placeholder{
+  color: #88b4d0;
+}
+.profile h3{
+  font-weight: 600;
+  font-size: calc(0.7vw + 10px);
+}
+.edit-btn{
+  margin-top: 30px;
+  border:none;
+  background-color: #317199;
+  color: #fff;
+  padding: 5px 30px;
+  min-width: 60%;
+}
+.profile button{
+  font-size: calc(0.6vw + 5px);
+}
+.edit-info-point{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+  max-width: 100%;
+}
+.edit-info-point > div{
+  display:flex;
+  max-width: calc(100% - 50px);
+  justify-content: start;
+  align-items: center;
+  text-align: start;
+  font-size: calc(0.6vw + 5px);
+}
+.edit-info-point > button{
+  margin: 1px;
+  padding: 1px;
+}
+.edit-info-point img{
+  height: 30px;
+  margin-right: 5px;
+}
+.edit-info-point a, .edit-info-point p{
+  margin: 0 0 0 10px;
+  -ms-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.edit-info-point a {
+  text-decoration: underline #317199;
+}
+.edit-info-point p{
+  font-size: calc(0.5vw + 7px);
+}
+.point-btn{
+  background-color: transparent;
+  border:none;
+  border-radius: 50%;
+}
+.add-btn{
+  position: relative;
+  bottom: 0;
+}
+.status-change-box, .pass-change-box{
+  border: 1px solid #003470;
+  background-color: #fff;
+  padding: 30px;
+
+}
+.edit-info h3{
+  margin-bottom: 15px;
+}
 
 .about-main-wrapper{
   margin: 0;
