--- a/src/css/app.css
+++ b/src/css/app.css
@@ -63,6 +63,7 @@ h2 {
     border-radius: 4px;
     height: 300px;
     padding: 3px 10px;
+    background-color: white;
 }
 
 .card-members-photo {
@@ -120,9 +121,10 @@ hr {
     bottom: 5px;
     left: 30px;
 }
-.card-members-photo{
-    width:100px;
-    height:100px;
+
+.card-members-photo {
+    width: 100px;
+    height: 100px;
 }
 
 .contacts-search-wrapper {
@@ -144,6 +146,11 @@ hr {
     flex-direction: column;
     padding: 20px 0;
 
+}
+
+.btn {
+    outline: none;
+    border: unset;
 }
 
 .contacts-search-wrapper_classes_btn {
@@ -975,6 +982,38 @@ hr {
     padding: 1vw 3vw 1vw 3vw;
 }
 
+.show-more-btn {
+    margin-top: 30px;
+    border: 2px solid #317199;
+    color: rgb(136, 182, 207);;
+    background-color: white;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+}
+input[name="quicksearch"]{
+    margin-top:8px;
+}
+.my-mt-1{
+    margin-top:25px;
+}
+.magnifier-ico {
+    background-color: #003470;
+    border-radius: 50%;
+    border: 4px solid #003470;
+    width: 35px;
+    height: 35px;
+    padding:1px;
+
+}
+
+.show-more-btn:hover {
+    border: 2px solid #317199;
+    color: white;
+    background-color: #317199;
+}
+
 #read-more2:hover {
     background-color: #28639b;
     transition: 0.3s;
@@ -1220,16 +1259,19 @@ hr {
 }
 
 @media screen and (min-width: 512px) {
-    .carts-box{
+    .carts-box {
         padding: 10px 20px;
     }
+
     .card-leaf {
         bottom: 5px;
         left: 5px;
     }
+
     .card-container {
         flex-direction: row;
         height: 160px;
+
     }
 
     .contact-search_select.small {
@@ -1251,9 +1293,15 @@ hr {
 }
 
 @media screen and (min-width: 768px) {
-    .carts-box{
+    .magnifier-ico {
+
+        width: 45px;
+        height: 45px;
+    }
+    .carts-box {
         padding: 10px 20px;
     }
+
     .carts-box {
         grid-template-columns: 1fr 1fr;
     }
@@ -1291,9 +1339,10 @@ hr {
 }
 
 @media screen and (min-width: 1400px) {
-    .carts-box{
+    .carts-box {
         padding: 10px 30px;
     }
+
     .carts-box {
         grid-template-columns: 1fr 1fr 1fr;
     }
