--- a/src/css/app.css
+++ b/src/css/app.css
@@ -13,6 +13,10 @@ h2 {
     color: #28639b;
 }
 
+body {
+    margin: 0;
+}
+
 #root {
     text-align: center;
 }
@@ -38,7 +42,7 @@ h2 {
 }
 
 .contacts-section_content-wrapper_search-control {
-    width: 50%;
+    width: 45%;
     padding: 1% 1%;
     border-right: 1px solid rgb(79, 105, 115);
 }
@@ -48,11 +52,10 @@ h2 {
 }
 
 .carts-box {
-    width: 100%;
     display: grid;
     grid-template-columns: 1fr;
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
+    grid-column-gap: 15px;
+    grid-row-gap: 15px;
     padding: 10px 4px;
 }
 
@@ -132,7 +135,7 @@ hr {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: 100%;
+    width: 80%;
     padding: 0 10%;
 }
 
@@ -156,13 +159,15 @@ hr {
 }
 
 .contacts-search-wrapper_classes_btn {
+    padding: 5px 4px;
     margin: 5px 0;
     outline: none;
     background-color: rgb(192, 222, 237);
     border-radius: 5px;
     border: unset;
     color: rgb(87, 127, 148);
-    font-weight: 500;
+    font-size: 16px;
+    font-weight: 600;
     border: 2px solid rgb(192, 222, 237);
     -webkit-transition: all 0.5s;
     -moz-transition: all 0.5s;
@@ -176,6 +181,7 @@ hr {
 }
 
 .contact-search_select {
+    padding: 2px 4px;
     font-size: 17px;
     width: 100%;
     border: 1px solid rgb(91, 102, 99);
@@ -186,13 +192,21 @@ hr {
 .datepicker {
     text-align: center;
 }
-.react-datepicker-wrapper, .react-datepicker__input-container {
-    width: 100%;
-}
+
 
 .contacts-search-wrapper_filters {
     margin-top: 20px;
 
+}
+
+.contacts-search-wrapper_filters h4 {
+    font-size: 25px;
+    margin: 10px 0;
+}
+
+.contacts-search-wrapper_filters h5 {
+    font-size: 19px;
+    margin: 25px 0 10px 0;
 }
 
 .contacts-search-wrapper_filters_two-in-row-box {
@@ -203,6 +217,9 @@ hr {
 
 }
 
+input {
+    box-sizing: border-box;
+}
 
 .admin-menu, .admin-menu a, .admin-footer {
     background-color: #003470;
@@ -302,8 +319,8 @@ hr {
 }
 
 .admin-menu_logo-img {
-    height: 45px;
-    width: 45px;
+    height: 65px;
+    width: 65px;
 }
 
 .admin-menu_user-icon {
@@ -364,10 +381,33 @@ hr {
     width: 100%;
 }
 
-.footer {
+.footer-box {
+    padding: 20px 0;
     background-color: #cdcdcd;
+    justify-content: center;
+}
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
     padding-top: 10px;
     padding-bottom: 10px;
+}
+
+.footer-logo-icons-box {
+    margin-bottom: 20px;
+    width: 100%;
+    justify-content: center;
+    display: flex;
+}
+
+.footer-emblem-box {
+    margin-bottom: 20px;
+    width: 100%;
+    justify-content: center;
+    display: flex;
 }
 
 .navbar {
@@ -387,10 +427,20 @@ hr {
     align-items: center;
 }
 
-.navbar a, .navbar button {
-    color: white;
-    font-size: calc(0.7vw + 5px);
+.auth-box {
+    display: flex;
+    justify-content: space-between;
+}
 
+.navbar a, .navbar button {
+    text-decoration: none;
+    color: white;
+    font-size: 15px;
+
+}
+
+.profile-icon-link {
+    margin-right: 20px;
 }
 
 .navbar button {
@@ -435,6 +485,8 @@ hr {
 }
 
 .main-photo {
+    width: 100%;
+    height: auto;
     margin-top: -70px;
 }
 
@@ -456,12 +508,13 @@ hr {
 
 .footer-title {
     text-align: left;
-    width: 250px;
     margin-left: 20px;
     margin-top: 50px;
 }
 
 .footer-name {
+    display: flex;
+    justify-content: center;
     margin-top: 10px;
     text-align: right;
 }
@@ -479,6 +532,23 @@ hr {
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+.main-page_content {
+    padding: 30px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.main-page_text {
+    width: 60%;
+}
+
+.title-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 25%;
 }
 
 .main-page * {
@@ -503,6 +573,11 @@ hr {
     border: 1px solid #317199;
     padding: 10px 25px 10px 25px;
     font-size: 12px;
+
+}
+
+.main-about-link {
+    width: 100px;
 }
 
 .main-about-link:hover, .main-proj-link:hover {
@@ -529,7 +604,9 @@ hr {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     display: none;
+    width:120px;
 }
 
 .main-proj-link {
@@ -761,6 +838,7 @@ hr {
     color: #003470;
     cursor: pointer;
 }
+
 .add-member-btn:hover {
     transform: scale(1.2);
 }
@@ -1007,7 +1085,8 @@ hr {
 }
 
 .show-more-btn {
-    margin-top: 30px;
+    padding: 5px 10px;
+    margin: 30px 0;
     border: 2px solid #317199;
     color: rgb(136, 182, 207);;
     background-color: white;
@@ -1016,19 +1095,22 @@ hr {
     -o-transition: all 0.5s;
     transition: all 0.5s;
 }
-input[name="quicksearch"]{
-    margin-top:8px;
+
+input[name="quicksearch"] {
+    margin-top: 8px;
 }
-.my-mt-1{
-    margin-top:25px;
+
+.my-mt-1 {
+    margin-top: 25px;
 }
+
 .magnifier-ico {
     background-color: #003470;
     border-radius: 50%;
     border: 4px solid #003470;
-    width: 35px;
-    height: 35px;
-    padding:1px;
+    width: 15px;
+    height: 15px;
+    padding: 1px;
 
 }
 
@@ -1318,12 +1400,24 @@ input[name="quicksearch"]{
 }
 
 @media screen and (min-width: 768px) {
+    .footer {
+        flex-direction: row;
+    }
+
+    .footer-logo-icons-box {
+        width: 50%;
+    }
+
+    .footer-emblem-box {
+        width: 50%;
+    }
 
     .magnifier-ico {
 
         width: 45px;
         height: 45px;
     }
+
     .carts-box {
         padding: 10px 20px;
     }
