--- a/src/css/app.css
+++ b/src/css/app.css
@@ -668,9 +668,14 @@ hr {
 
 .profile-ico-r {
     right: 10px;
+    height: 30%;
+    padding: 0;
     border: 1px solid #317199;
 }
-
+.profile-ico-r img{
+    width: 100%;
+    height: 100%;
+}
 .profile-ico-l {
     left: 10px;
 }
