--- a/src/css/app.css
+++ b/src/css/app.css
@@ -12,7 +12,9 @@ h2 {
     font-family: 'Lato', sans-serif;
     color: #28639b;
 }
-
+button:hover{
+    outline: none;
+}
 #root {
     text-align: center;
 }
@@ -665,7 +667,11 @@ hr {
     -moz-border-radius: 50%;
     border-radius: 50%;
 }
-
+.name-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .profile-ico-r {
     right: 10px;
     height: 30%;
@@ -681,7 +687,8 @@ hr {
 }
 
 .card-name, .card-nickname {
-    width: 90%;
+    margin: 0;
+    /*width: 90%;*/
 }
 
 .card-nickname {
@@ -691,7 +698,19 @@ hr {
 .card-name {
     font-size: calc(2vw);
 }
-
+.pen-icon-btn{
+    outline: none;
+    border: none;
+    background: transparent;
+}
+.pen-icon-big{
+    height: 1.3em;
+    margin-left: 6px;
+}
+.pen-icon-medium{
+    height: 1.1em;
+    margin-left: 4px;
+}
 .edit-info-wrapper {
     padding-top: 20px;
     display: grid;
