--- a/src/css/app.css
+++ b/src/css/app.css
@@ -21,9 +21,10 @@ body {
     margin: 0;
 }
 
-button:hover{
+button:hover {
     outline: none;
 }
+
 #root {
     text-align: center;
 }
@@ -200,6 +201,9 @@ hr {
     text-align: center;
 }
 
+.react-datepicker-wrapper, .react-datepicker__input-container {
+    width: 100%;
+}
 
 .contacts-search-wrapper_filters {
     margin-top: 20px;
@@ -756,21 +760,28 @@ input {
     -moz-border-radius: 50%;
     border-radius: 50%;
 }
-.name-box{
+
+.name-box {
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .profile-ico-r {
     right: 10px;
     height: 30%;
     padding: 0;
     border: 1px solid #317199;
 }
-.profile-ico-r img{
+.profile-ico-r img, .profile-ico-r label{
     width: 100%;
     height: 100%;
 }
+
+.profile-card .profile-ico-r input.update-photo {
+    display:none;
+}
+
 .profile-ico-l {
     left: 10px;
 }
@@ -787,19 +798,23 @@ input {
 .card-name {
     font-size: calc(2vw);
 }
-.pen-icon-btn{
+
+.pen-icon-btn {
     outline: none;
     border: none;
     background: transparent;
 }
-.pen-icon-big{
+
+.pen-icon-big {
     height: 1.3em;
     margin-left: 6px;
 }
-.pen-icon-medium{
+
+.pen-icon-medium {
     height: 1.1em;
     margin-left: 4px;
 }
+
 .edit-info-wrapper {
     padding-top: 20px;
     display: grid;
@@ -1136,10 +1151,9 @@ input[name="quicksearch"] {
     background-color: #003470;
     border-radius: 50%;
     border: 4px solid #003470;
-    width: 15px;
-    height: 15px;
+    width: 35px;
+    height: 35px;
     padding: 1px;
-
 }
 
 .show-more-btn:hover {
