fix bugs & birth editor & icons

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -204,7 +204,9 @@ hr {
 .react-datepicker-wrapper, .react-datepicker__input-container {
     width: 100%;
 }
-
+.react-datepicker-wrapper .input{
+    margin: 0;
+}
 .contacts-search-wrapper_filters {
     margin-top: 20px;
 
@@ -680,10 +682,14 @@ input {
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
-    color: #317199;
     text-align: center;
 }
-
+.profile p, .profile a, .profile h3, .profile input{
+    color: #317199;
+}
+.profile p{
+    margin: 0;
+}
 .profile > div {
     padding: 40px;
     background-color: #e1ecf3;
@@ -709,7 +715,11 @@ input {
     display: flex;
     background-color: #fff;
 }
-
+.profile-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 .profile-card > div {
     width: 50%;
     padding: 10px;
@@ -717,7 +727,6 @@ input {
 }
 
 .card-info-box {
-    min-height: 65%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
@@ -725,7 +734,7 @@ input {
 
 .card-info {
     background-color: #e1ecf3;
-    padding: 10px 5px;
+    padding: 20px 5px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -760,11 +769,15 @@ input {
     -moz-border-radius: 50%;
     border-radius: 50%;
 }
-
+.name-wrapper{
+    margin-top: 15px;
+}
 .name-box {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .profile-ico-r {
@@ -772,6 +785,9 @@ input {
     height: 30%;
     padding: 0;
     border: 1px solid #317199;
+}
+.profile-ico-r:hover{
+    transform: scale(1.1);
 }
 .profile-ico-r img, .profile-ico-r label{
     width: 100%;
@@ -817,10 +833,9 @@ input {
 
 .edit-info-wrapper {
     padding-top: 20px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    display: flex;
+    justify-content: space-between;
     background-color: #e1ecf3;
-    grid-gap: 10px;
     width: 100%;
 }
 
@@ -834,6 +849,7 @@ input {
     border: 1px solid #317199;
     background-color: #fff;
     padding: 30px 10px 10px 10px;
+    width: 30%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -845,10 +861,11 @@ input {
 
 .profile input {
     border: 1px solid #317199;
+}
+.pass-change-box input{
     margin-top: 8px;
     width: 100%;
 }
-
 .profile input[placeholder] {
     color: #88b4d0;
 }
@@ -900,31 +917,37 @@ input {
 
 .edit-info-point {
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     align-items: center;
     margin-bottom: 10px;
-    max-width: 100%;
+    color: #317199;
+    text-align: left;
+    position: relative;
 }
 
 .edit-info-point > div {
-    display: flex;
-    max-width: calc(100% - 50px);
-    justify-content: start;
-    align-items: center;
+    width: calc(100% - 50px);
     text-align: start;
     font-size: calc(0.6vw + 5px);
+    display: flex;
+    align-items: center;
+}
+.edit-info-point > div > div{
+    width: calc(100% - 30px);
 }
 
-.edit-info-point > button {
-    margin: 1px;
-    padding: 1px;
-}
-
-.edit-info-point img {
+.edit-info-point > div > img {
     height: 30px;
-    margin-right: 5px;
+    margin: 0;
 }
-
+.edit-info-point > .point-btn > img{
+    height: 20px;
+}
+.point-btn{
+    position: absolute;
+    right: 0;
+    top: 5px;
+}
 .edit-info-point a, .edit-info-point p {
     margin: 0 0 0 10px;
     -ms-text-overflow: ellipsis;
