about us layout fixes

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -959,7 +959,9 @@ input {
 }
 
 .about-sb {
-    width: 100%;
+    
+    margin-right: auto;
+    width: 6em
 }
 
 #join-button {
@@ -1028,7 +1030,7 @@ input {
     font-size: 2.5vw;
 }
 
-.paravoz {
+.photo-near-train {
     width: 100%;
     display: inline-block;
 }
@@ -1051,22 +1053,22 @@ input {
 }
 
 .circle-ava {
-    width: 200px;
+    width: 150px;
 }
 
 .under-heading {
     text-align: center;
-    width: 80%;
+    width: 60%;
 }
 
 #org-history {
     color: #28639b;
     font-size: 2.5vw;
-    margin-left: 9.5%;
+    /* margin-left: 9.5%; */
 }
 
 .org-history-desc {
-    display: inline-block;
+    /* display: inline-block; */
     position: relative;
     width: 50%;
     text-align: left;
@@ -1150,8 +1152,8 @@ input[name="quicksearch"] {
     display: flex;
     flex-direction: column;
     position: relative;
-    padding: 0 15%;
-    margin: 0 0 0 6%;
+    /* padding: 0 15%; */
+    /* margin: 0 0 0 6%; */
 
 
 }
@@ -1159,7 +1161,7 @@ input[name="quicksearch"] {
 .find-icons {
     display: flex;
     justify-content: space-between;
-    padding: 0 10%;
+    padding: 0 4%;
     max-width: 150px;
 }
 
@@ -1169,7 +1171,7 @@ input[name="quicksearch"] {
 
 .address {
     margin: 0;
-    font-size: 14px;
+    font-size: 19px;
     position: relative;
     text-align: left;
 }
@@ -1332,7 +1334,9 @@ input[name="quicksearch"] {
 }
 
 .about-sb-sec2 {
-    margin-top: 0;
+    margin-left: auto;
+    text-align:left;
+    width: 100%;
 }
 
 .second-section-element {
@@ -1383,6 +1387,22 @@ input[name="quicksearch"] {
 
 @media screen and (min-width: 320px) {
 
+        .under-heading {
+        text-align: center;
+        width: 100%;
+    }
+
+    .about-sb {
+        width: 100%;
+    }
+
+    .org-history-desc {
+        /* display: inline-block; */
+        position: relative;
+        width: 100%;
+        text-align: left;
+    }
+    
 }
 
 @media screen and (min-width: 512px) {
@@ -1485,6 +1505,11 @@ input[name="quicksearch"] {
         width: 70%;
 
     }
+
+    .under-heading {
+        text-align: center;
+        width: 100%;
+    }
 }
 
 @media screen and (min-width: 1024px) {
@@ -1503,6 +1528,18 @@ input[name="quicksearch"] {
     .carts-wrapper {
         width: 72%;
 
+    }
+
+    .under-heading {
+        text-align: center;
+        width: 100%;
+    }
+
+    .org-history-desc {
+        /* display: inline-block; */
+        position: relative;
+        width: 50%;
+        text-align: left;
     }
 
 }
